--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -1,20 +1,27 @@
 on:
   push:
     branches: ["main"]
-    
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Setup JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-    - name: Build maven
-      run: mvn clean install
-    - uses: actions/upload-artifact@v3
-      with:
-        name: app.jar
-        path: target/anekdot-sender-0.0.1-SNAPSHOT.jar
+      - uses: actions/checkout@v3
+      - name: Setup JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+      - name: Build maven
+        run: mvn clean install
+      - uses: actions/upload-artifact@v3
+        with:
+          name: app.jar
+          path: target/anekdot-sender-0.0.1-SNAPSHOT.jar
+      - name: Login to Docker Hub
+        run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD}}
+      - name: Build image
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/java-app:latest
+      - name: Docker push image
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/java-app:latest
+        
