--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Login to Docker Hub
         run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD}}
       - name: Build image
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/java-app:latest
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/java-app:latest .
       - name: Docker push image
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/java-app:latest
         
